link movie/genre and fix rating name sentences

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -8,7 +8,7 @@
       <th>Name</th>
       <th>Movie url</th>
       <th>Year</th>
-      <th>Parental guidante rate</th>
+      <th>Rating</th>
       <th>Cover url</th>
       <th colspan="3"></th>
     </tr>
@@ -20,7 +20,7 @@
         <td><%= movie.name %></td>
         <td><%= movie.movie_url %></td>
         <td><%= movie.year %></td>
-        <td><%= movie.parental_guidante_rate %></td>
+        <td><%= movie.rating %></td>
         <td><%= movie.cover_url %></td>
         <td><%= link_to 'Show', movie %></td>
         <td><%= link_to 'Edit', edit_movie_path(movie) %></td>
