year/rating name corrections + comments added

--- a/app/views/movies/_form.html.erb
+++ b/app/views/movies/_form.html.erb
@@ -22,13 +22,13 @@
   </div>
 
   <div class="field">
-    <%= form.label :year %>
-    <%= form.datetime_select :year %>
+    <%= form.label :release_date %>
+    <%= form.datetime_select :release_date %>
   </div>
 
   <div class="field">
-    <%= form.label :parental_guidante_rate %>
-    <%= form.text_field :parental_guidante_rate %>
+    <%= form.label :rating %>
+    <%= form.text_field :rating %>
   </div>
 
   <div class="field">
