--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -7,7 +7,7 @@
     <tr>
       <th>Name</th>
       <th>Movie url</th>
-      <th>Year</th>
+      <th>Release Date</th>
       <th>Rating</th>
       <th>Cover url</th>
       <th colspan="3"></th>
@@ -19,7 +19,7 @@
       <tr>
         <td><%= movie.name %></td>
         <td><%= movie.movie_url %></td>
-        <td><%= movie.year %></td>
+        <td><%= movie.release_date %></td>
         <td><%= movie.rating %></td>
         <td><%= movie.cover_url %></td>
         <td><%= link_to 'Show', movie %></td>
