'genres' added to be shown/edited on movie view

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -6,6 +6,11 @@
 </p>
 
 <p>
+  <strong>Genre:</strong>
+  <%= @movie.genre.name %>
+</p>
+
+<p>
   <strong>Movie url:</strong>
   <%= @movie.movie_url %>
 </p>
