View style: 1st approach

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,14 @@
   </head>
 
   <body>
-    <%= yield %>
+    <%= render "layouts/nav_bar" %>
+    <div class="card">
+      <div class="card-body">
+      <%= yield %>
+      <br>
+      <%= render "layouts/footer" %>
+      </div>
+    </div> <!-- /container -->
+    <a href="#top"><img src="/images/pics/up_arrow.jpg" class="float-arrow" style="max-width:2%;"/></a>
   </body>
 </html>
