--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -6,43 +6,6 @@
 </p>
 
 <p>
-  <strong>Cover url:</strong><br>
-  <img class="card-img-left" src= "<%= @movie.cover_url %>"/>
-</p>
-
-<p>
-  <strong>Genre:</strong>
-  <%= @movie.genre.name %>
-</p>
-
-<p>
-  <strong>Cast:</strong><br>
-</p>
-  <% @movie.movie_artists.where(role: 'Cast').each do |ma| %>
-<ul>
-<li>  <%= ma.artist.name%> </li>
-</ul>
-<% end %>
-
-<p>
-  <strong>Director:</strong><br>
-</p>
-  <% @movie.movie_artists.where(role: 'Director').each do |ma| %>
-<ul>
-<li>  <%= ma.artist.name%> </li>
-</ul>
-<% end %>
-
-<p>
-  <strong>Producer:</strong><br>
-</p>
-  <% @movie.movie_artists.where(role: 'Producer').each do |ma| %>
-<ul>
-<li>  <%= ma.artist.name%> </li>
-</ul>
-<% end %>
-
-<p>
   <strong>Movie url:</strong>
   <%= @movie.movie_url %>
 </p>
@@ -56,6 +19,43 @@
   <strong>Rating:</strong>
   <%= @movie.rating %>
 </p>
+
+<p>
+  <strong>Genre:</strong>
+  <%= @movie.genre.name %>
+</p>
+
+<p>
+  <strong>Cover url:</strong><br>
+  <img class="card-img-left" src= "<%= @movie.cover_url %>"/>
+</p>
+
+<p>
+  <strong>Directors:</strong><br>
+</p>
+  <% @movie.movie_artists.where(role: 'Director').each do |ma| %>
+<ul>
+<li>  <%= ma.artist.name%> </li>
+</ul>
+<% end %>
+
+<p>
+  <strong>Producers:</strong><br>
+</p>
+  <% @movie.movie_artists.where(role: 'Producer').each do |ma| %>
+<ul>
+<li>  <%= ma.artist.name%> </li>
+</ul>
+<% end %>
+
+<p>
+  <strong>Cast:</strong><br>
+</p>
+  <% @movie.movie_artists.where(role: 'Cast').each do |ma| %>
+<ul>
+<li>  <%= ma.artist.name%> </li>
+</ul>
+<% end %>
 
 <%= link_to 'Edit', edit_movie_path(@movie) %> |
 <%= link_to 'Back', movies_path %>
