--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,43 +1,27 @@
 <p id="notice"><%= notice %></p>
-
 <div class="card">
-  <h5 class="card-header"><b>Movies</b></h5>
+  <h5 class="card-header"><b>Available Movies</b></h5>
   <div class="card-body">
-    <table class="table table-striped">
-      <thead>
-        <tr>
-          <th width="10%"></th>
-          <th width="30%"></th>
-          <th></th>
-          <th></th>
-        </tr>
-      </thead>
-
-      <tbody>
-        <% @movies.each do |movie| %>
-          <tr>
-            <td><img class="card-img-left" src= "<%= movie.cover_url %>" style="max-width:70%;"/></td>
-            <td style="vertical-align:middle"><h5><b><%= movie.name %></b><h5></td>
-            <td style="vertical-align:middle">
-              <ul>
-                <li>Release Date: <%= movie.release_date %></li>
-                <li>Rating: <%= movie.rating %></li>
-                <li>Genre: <%= movie.genre.name %></li>
-                <li>Movie URL: <%= movie.movie_url %></li>
-              </ul>
-            </td>
-            <td style="vertical-align:middle">
-              <%= link_to 'Show', movie %> | 
-              <%= link_to 'Edit', edit_movie_path(movie) %> | 
-              <%= link_to 'Destroy', movie, method: :delete, data: { confirm: 'Are you sure?' } %>
-            </td>
-          </tr>
-        <% end %>
-      </tbody>
-    </table>
-
-    <br>
-
+    <div class="row">
+    <% @movies.each do |movie| %>
+      <div class="flip-card">
+        <div class="flip-card-inner">
+          <div class="flip-card-front">
+            <img src="<%= movie.cover_url %>" style="width:100%">
+          </div>
+          <div class="flip-card-back">
+            <ul>
+              <li>Movie name: <%= movie.name %></li>
+              <li>Release Date: <%= movie.release_date %></li>
+              <li>Rating: <%= movie.rating %></li>
+              <li>Genre: <%= movie.genre.name %></li>
+              <li>Movie URL: <%= movie.movie_url %></li>
+            </ul>
+          </div>
+        </div>
+      </div> 
+    <% end %>
+    </div><br>
     <%= link_to 'New Movie', new_movie_path %>
     <%= link_to 'Search Movie using TMDB API', api_search_movies_path %>
   </div>
