--- a/app/views/layouts/_nav_bar.erb
+++ b/app/views/layouts/_nav_bar.erb
@@ -17,10 +17,10 @@
       <% end %>
       </li>
       <li class="nav-item">
-        <% if @contact_obra_selected_in_nav %>
-          <a class="nav-link active" href="/contact" role="button">Contact</a>
+        <% if @about_selected_in_nav %>
+          <a class="nav-link active" href="/about" role="button">About</a>
         <% else %>
-          <a class="nav-link" href="/contact" role="button">Contact</a>
+          <a class="nav-link" href="/about" role="button">About</a>
         <% end %>
       </li>
     </ul>
