View style: 3rd approach

--- a/app/views/layouts/_nav_bar.erb
+++ b/app/views/layouts/_nav_bar.erb
@@ -11,9 +11,16 @@
       </li>
       <li class="nav-item">
       <% if @movies_selected_in_nav %>
-        <a class="nav-link active" href="/movies">Movies <span class="sr-only">(current)</span></a>
+        <a class="nav-link active" href="/movies" role="button">Movies</a>
       <% else %>
-        <a class="nav-link" href="/movies">Movies <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/movies" role="button">Movies</a>
+      <% end %>
+      </li>
+      <li class="nav-item">
+      <% if @genres_selected_in_nav %>
+        <a class="nav-link active" href="/genres" role="button">Genres</a>
+      <% else %>
+        <a class="nav-link" href="/genres" role="button">Genres</a>
       <% end %>
       </li>
       <li class="nav-item">
