View style: 4th approach

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -86,8 +86,8 @@ img {
 
 /* Style the back side */
 .flip-card-back {
-  background-color: dodgerblue;
-  color: white;
+  background-color: rgb(53, 98, 143);
+  color: rgb(188, 216, 243);
   width: 150px;
   height: 225px;
   transform: rotateY(180deg);
