--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -49,9 +49,9 @@ img {
  /* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
  .flip-card {
   background-color: transparent;
-  width: 150px;
-  height: 225px;
-  border: 1px solid #f1f1f1;
+  width: 170px;
+  height: 253px;
+  border: 2px solid #ffffff;
   //perspective: 1000px; /* Remove this if you don't want the 3D effect */
 }
 
@@ -61,7 +61,7 @@ img {
   width: 100%;
   height: 100%;
   text-align: center;
-  transition: transform 0.8s;
+  transition: transform 0.6s;
   transform-style: preserve-3d;
 }
 
@@ -88,7 +88,8 @@ img {
 .flip-card-back {
   background-color: rgb(53, 98, 143);
   color: rgb(188, 216, 243);
-  width: 150px;
-  height: 225px;
+  width: 168px;
+  height: 253px;
+  border: 2px solid #ffffff;
   transform: rotateY(180deg);
 } 
