--- a/app/views/layouts/_nav_bar.erb
+++ b/app/views/layouts/_nav_bar.erb
@@ -1,6 +1,9 @@
 <div class="header clearfix">
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#" style="font-size:14px">Movie Rental App</a>
+  <nav class="navbar navbar-light" style="background-color:#bce5ff; padding:1px">
+    <a class="navbar-brand" href="#" style="font-size:14px;">
+      <%= image_tag "movies.png", style:"height:50px; width:50px;" %>
+      Movie Rental App
+    </a>
     <ul class="nav nav-tabs float-right mb-1">
       <li class="nav-item">
       <% if @home_selected_in_nav %>
