--- a/app/views/layouts/_footer.erb
+++ b/app/views/layouts/_footer.erb
@@ -1,3 +1,3 @@
 <div class="footer mt-3">
-  <p style="font-size:14px">&copy; Movie Rental App -by egv</p>
+  <p style="font-size:14px; color:LightBlue;">&copy; Movie Rental App -by egv</p>
 </div>
