--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,10 @@
-<h3>Home</h3>
-<%= link_to "Sign up now!", signup_path %>
+<h1>Home</h1>
 
-<p><%= link_to "About", about_path %></p>
+<p>
+<% if logged_in? %>
+  <%= link_to "Profile", current_user %>
+  <%= link_to "Log out", logout_path, method: :delete %>
+<% else %>
+  <%= link_to "Log in", login_path %>
+<% end %>
+</p>
