--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,8 +19,8 @@
 body {
   background-image: url("filmstrip-background");
   background-color: #40698f;
-  background-repeat: no-repeat;
-  background-size: cover;
+  background-attachment: fixed;
+  background-size: auto;
 }
 
 .vertical-center {
@@ -33,6 +33,7 @@ body {
 
 .card {
   /* Add shadows to create the "card" effect */
+  margin: 0 auto;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   border-radius: 5px; /* 5px rounded corners */
@@ -102,3 +103,10 @@ img {
   border-color: transparent;
   transform: rotateY(180deg);
 } 
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
