--- a/app/views/genres/show.html.erb
+++ b/app/views/genres/show.html.erb
@@ -5,5 +5,5 @@
   <%= @genre.name %>
 </p>
 
-<%= link_to 'Edit', edit_genre_path(@genre) %> |
-<%= link_to 'Back', genres_path %>
+<%= link_to 'Back', genres_path %> | 
+<%= link_to 'Edit', edit_genre_path(@genre) %>
