--- a/app/views/genres/index.html.erb
+++ b/app/views/genres/index.html.erb
@@ -15,13 +15,16 @@
       <tr>
         <td><%= genre.name %></td>
         <td><%= link_to 'Show', genre %></td>
-        <td><%= link_to 'Edit', edit_genre_path(genre) %></td>
-        <td><%= link_to 'Destroy', genre, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% if current_user.is_admin? %>
+          <td><%= link_to 'Edit', edit_genre_path(genre) %></td>
+          <td><%= link_to 'Destroy', genre, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
-
-<%= link_to 'New Genre', new_genre_path %>
+<% if current_user.is_admin? %>
+  <%= link_to 'New Genre', new_genre_path %>
+<% end %>
