--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -21,8 +21,10 @@
       </div>
     <% end %>
   </div><br><br>
-  <div class="row">
-    <%= button_to 'New Movie', new_movie_path, :method => :get, :class => "btn-md btn-primary" %> &nbsp;
-    <%= button_to 'Search Movie using TMDB API', api_search_movies_path, :method => :get, :class => "btn-md btn-primary" %>
-  </div>
+  <% if current_user.is_admin? %>
+    <div class="row">
+      <%= button_to 'New Movie', new_movie_path, :method => :get, :class => "btn-md btn-primary" %> &nbsp;
+      <%= button_to 'Search Movie using TMDB API', api_search_movies_path, :method => :get, :class => "btn-md btn-primary" %>
+    </div>
+  <% end %>
 </div>
