--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -58,6 +58,8 @@
     <% if current_user.is_admin? %>
       <%= button_to 'Edit', edit_movie_path(@movie), :method => :get, :class => "btn-md btn-info" %> &nbsp; &nbsp; &nbsp;
       <%= button_to 'Destroy', @movie, method: :delete, :class => "btn-md btn-danger", data: { confirm: 'Are you sure?' } %>
+    <% else %>
+      <%= button_to 'Rent', new_rental_path(movie_id: @movie.id), class: 'btn-md btn-success' %>
     <% end %>
   </div>
 </div>
