--- a/app/views/layouts/_nav_bar.erb
+++ b/app/views/layouts/_nav_bar.erb
@@ -42,6 +42,7 @@
             <%=current_user.name%>
           </button>
           <div class="dropdown-menu">
+            <%= link_to 'My Rentals', rentals_path, class: 'dropdown-item' %>
             <%= link_to 'Logout', logout_path, method: :delete, class: 'dropdown-item' %>
           </div>
         </div>
