--- a/app/views/genres/index.html.erb
+++ b/app/views/genres/index.html.erb
@@ -6,6 +6,7 @@
   <thead>
     <tr>
       <th>Name</th>
+      <th>Movies count</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -14,6 +15,7 @@
     <% @genres.each do |genre| %>
       <tr>
         <td><%= genre.name %></td>
+        <td><%= genre.movies.count %></td>
         <td><%= link_to 'Show', genre %></td>
         <% if current_user.is_admin? %>
           <td><%= link_to 'Edit', edit_genre_path(genre) %></td>
